...
                    android:textSize="45sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/favBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/btn_circular"
...
                    android:fontFamily="@font/lato"
                    android:text="@string/route_name"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/routeName"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:hint="@string/route_name"
                    android:inputType="text"
                    android:background="@color/white"
...
                    android:fontFamily="@font/lato"
                    android:text="@string/start_position"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/routeStart"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:hint="@string/start_position"
                    android:inputType="text"
                    android:background="@color/white"
...
                    android:layout_weight="1"
                    android:text="Land:"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/routeLandFlat"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100sp"
                    android:layout_height="50sp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/btn_circular"
                    android:drawablePadding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="Flat"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/routeLandHills"
                    style="?android:attr/buttonBarButtonStyle"
...
                    android:paddingRight="10dp"
                    android:text="Moderate"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/hardBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100sp"
                    android:layout_height="50sp"
                    android:layout_marginStart="5sp"
                    android:background="@drawable/btn_circular"
                    android:drawablePadding="5dp"
                    android:paddingLeft="10dp"
                    android:layout_alignParentEnd="true"
                    android:paddingRight="10dp"
                    android:text="Hard"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </RelativeLayout>

            <LinearLayout
...
                    android:backgroundTint="@color/stop"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />


                <Button
                    android:id="@+id/submitBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="150sp"
                    android:layout_height="50sp"
                    android:layout_marginStart="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_rounded"
...
