...
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/addRouteBtn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="320dp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:layout_marginStart="5sp"
        android:background="@drawable/btn_rounded"
...
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <!-- Main content -->

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
...
